--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel-node src -d dist",
-    "start": "nodemon --exec babel-node src"
+    "build": "babel src -d dist",
+    "start": "node dist/index.js",
+    "start:dev": "nodemon --exec babel-node src"
   },
   "keywords": [],
   "author": "",
